--- a/[Imersão_Python]_Aula_05.ipynb
+++ b/[Imersão_Python]_Aula_05.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMudZxBIP2hVpmsgysC4oR1",
+      "authorship_tag": "ABX9TyNKIfozv8Ouk+GEVuY6xeXW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {
         "id": "qqZIXvJj_-3o"
       },
@@ -52,7 +52,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Baixar dados dos ultimos quatro anos para uma ação especifica\n",
         "dados = yf.download(\"BTC-USD\", start=\"2020-01-01\", end=\"2024-03-28\", progress=False)\n",
         "dados = dados.reset_index()\n",
         "dados"
@@ -63,9 +62,9 @@
           "height": 424
         },
         "id": "IQieCkM_ACWF",
-        "outputId": "79a35a97-932c-41b2-d1c9-b073ea9a3e39"
+        "outputId": "a4b18625-07a1-4e0f-e844-208b183e0006"
       },
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,7 +100,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-478183ac-8ebf-4d34-a554-7be04b72de9d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3e6f24f7-455b-4041-b582-a842b49ac76e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -247,7 +246,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-478183ac-8ebf-4d34-a554-7be04b72de9d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3e6f24f7-455b-4041-b582-a842b49ac76e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -299,12 +298,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-478183ac-8ebf-4d34-a554-7be04b72de9d button.colab-df-convert');\n",
+              "        document.querySelector('#df-3e6f24f7-455b-4041-b582-a842b49ac76e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-478183ac-8ebf-4d34-a554-7be04b72de9d');\n",
+              "        const element = document.querySelector('#df-3e6f24f7-455b-4041-b582-a842b49ac76e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -324,8 +323,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-1bf5c850-1e52-4713-a954-87b1b58bab78\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1bf5c850-1e52-4713-a954-87b1b58bab78')\"\n",
+              "<div id=\"df-f1bc203f-2461-4d23-bdf6-3a8196880a78\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f1bc203f-2461-4d23-bdf6-3a8196880a78')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -444,14 +443,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-1bf5c850-1e52-4713-a954-87b1b58bab78 button');\n",
+              "        document.querySelector('#df-f1bc203f-2461-4d23-bdf6-3a8196880a78 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_9061eda3-b3d1-4ac4-9e12-be852675cab3\">\n",
+              "  <div id=\"id_3f8a76a1-670a-4f57-8506-979d6fbc30b3\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -495,7 +494,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_9061eda3-b3d1-4ac4-9e12-be852675cab3 button.colab-df-generate');\n",
+              "        document.querySelector('#id_3f8a76a1-670a-4f57-8506-979d6fbc30b3 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -516,27 +515,25 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 10
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Vamos dividir os dados em treino (até o final do primeiro semestre de 2023) e teste (segundo semestre de 2023)\n",
         "dados_treino = dados[dados['Date'] < '2023-07-31']\n",
         "dados_teste = dados[dados['Date'] >= '2023-07-31']"
       ],
       "metadata": {
         "id": "6i7MItogAHAa"
       },
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Preparando os dados para o FBProphet\n",
         "dados_prophet_treino = dados_treino[['Date', 'Close']].rename(columns={'Date': 'ds', 'Close':'y'})\n",
         "dados_prophet_treino"
       ],
@@ -546,9 +543,9 @@
           "height": 424
         },
         "id": "wJuXcoS8AMoC",
-        "outputId": "505cb4f7-d4d2-40cc-c667-f147b98330d6"
+        "outputId": "57259516-16a0-46de-fe7f-0a856c0f02f2"
       },
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,7 +568,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c9bb7def-89cd-4e3b-8309-8210dd307ee3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a48c8d70-01b2-4b2c-af31-5aae2ca03399\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -657,7 +654,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c9bb7def-89cd-4e3b-8309-8210dd307ee3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a48c8d70-01b2-4b2c-af31-5aae2ca03399')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -709,12 +706,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c9bb7def-89cd-4e3b-8309-8210dd307ee3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a48c8d70-01b2-4b2c-af31-5aae2ca03399 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c9bb7def-89cd-4e3b-8309-8210dd307ee3');\n",
+              "        const element = document.querySelector('#df-a48c8d70-01b2-4b2c-af31-5aae2ca03399');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -734,8 +731,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-163e9071-1a89-45e2-80d1-e4fd1266a50c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-163e9071-1a89-45e2-80d1-e4fd1266a50c')\"\n",
+              "<div id=\"df-a9aeb3c4-b3f8-45b1-8570-bb767629e20d\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a9aeb3c4-b3f8-45b1-8570-bb767629e20d')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -854,14 +851,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-163e9071-1a89-45e2-80d1-e4fd1266a50c button');\n",
+              "        document.querySelector('#df-a9aeb3c4-b3f8-45b1-8570-bb767629e20d button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_a1dfcf06-8f7c-4077-bb65-4f1bb05f158d\">\n",
+              "  <div id=\"id_60dd5347-0592-43a0-a2b3-b77bf5cbdbee\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -905,7 +902,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_a1dfcf06-8f7c-4077-bb65-4f1bb05f158d button.colab-df-generate');\n",
+              "        document.querySelector('#id_60dd5347-0592-43a0-a2b3-b77bf5cbdbee button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -926,14 +923,13 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 12
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Criar e treinar o modelo\n",
         "modelo = Prophet(weekly_seasonality=True,\n",
         "        yearly_seasonality=True,\n",
         "        daily_seasonality=False)\n",
@@ -947,22 +943,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BxmYnW3bAP_L",
-        "outputId": "ee774507-bc39-40ba-ab3d-3023f0af4e00"
+        "outputId": "1407d26d-a055-402e-90a8-ab9a1a5e6f5c"
       },
-      "execution_count": 5,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "DEBUG:cmdstanpy:input tempfile: /tmp/tmp3nlk07wl/j1b2yjs9.json\n",
-            "DEBUG:cmdstanpy:input tempfile: /tmp/tmp3nlk07wl/f7saa3bq.json\n",
+            "DEBUG:cmdstanpy:input tempfile: /tmp/tmp3nlk07wl/zpkadiwb.json\n",
+            "DEBUG:cmdstanpy:input tempfile: /tmp/tmp3nlk07wl/7i_65q_y.json\n",
             "DEBUG:cmdstanpy:idx 0\n",
             "DEBUG:cmdstanpy:running CmdStan, num_threads: None\n",
-            "DEBUG:cmdstanpy:CmdStan args: ['/usr/local/lib/python3.10/dist-packages/prophet/stan_model/prophet_model.bin', 'random', 'seed=65563', 'data', 'file=/tmp/tmp3nlk07wl/j1b2yjs9.json', 'init=/tmp/tmp3nlk07wl/f7saa3bq.json', 'output', 'file=/tmp/tmp3nlk07wl/prophet_modelcofn4h2p/prophet_model-20240329161815.csv', 'method=optimize', 'algorithm=lbfgs', 'iter=10000']\n",
-            "16:18:15 - cmdstanpy - INFO - Chain [1] start processing\n",
+            "DEBUG:cmdstanpy:CmdStan args: ['/usr/local/lib/python3.10/dist-packages/prophet/stan_model/prophet_model.bin', 'random', 'seed=3274', 'data', 'file=/tmp/tmp3nlk07wl/zpkadiwb.json', 'init=/tmp/tmp3nlk07wl/7i_65q_y.json', 'output', 'file=/tmp/tmp3nlk07wl/prophet_modele9lt_83b/prophet_model-20240329162743.csv', 'method=optimize', 'algorithm=lbfgs', 'iter=10000']\n",
+            "16:27:43 - cmdstanpy - INFO - Chain [1] start processing\n",
             "INFO:cmdstanpy:Chain [1] start processing\n",
-            "16:18:16 - cmdstanpy - INFO - Chain [1] done processing\n",
+            "16:27:43 - cmdstanpy - INFO - Chain [1] done processing\n",
             "INFO:cmdstanpy:Chain [1] done processing\n"
           ]
         },
@@ -970,11 +966,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<prophet.forecaster.Prophet at 0x7f2945d029e0>"
+              "<prophet.forecaster.Prophet at 0x7f2945408160>"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 13
         }
       ]
     },
@@ -986,26 +982,24 @@
       "metadata": {
         "id": "gI0Bln4JAUFa"
       },
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Criar datas futuras para previsão até o final de 2023\n",
         "futuro = modelo.make_future_dataframe(periods=150)\n",
         "previsao = modelo.predict(futuro)"
       ],
       "metadata": {
         "id": "9ffW5ZAyAbIb"
       },
-      "execution_count": 7,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Plotar os dados de treino, teste e previsões\n",
         "plt.figure(figsize=(14, 8))\n",
         "plt.plot(dados_treino['Date'], dados_treino['Close'], label='Dados de Treino', color='blue')\n",
         "plt.plot(dados_teste['Date'], dados_teste['Close'], label='Dados Reais (Teste)', color='green')\n",
@@ -1024,9 +1018,9 @@
           "height": 718
         },
         "id": "x1ASyYm-Alrz",
-        "outputId": "2de00d90-94ed-4722-8ba7-13637ed3aa05"
+        "outputId": "b738dd66-2543-4390-c4f6-953c2dcc8bd5"
       },
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
